--- a/about.html
+++ b/about.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo</title>
     <link rel="icon" type="image/x-icon" href="./logoipsum-logo-13.jpg">
+    <link rel="stylesheet" href="./style/about.css">
 
 </head>
 <body>
     <header>
-        <h1>ToDo</h1>
+        
         <div class="topnav">
             <a href="./index.html">Home</a>
             <a href="./about.html">about</a>
@@ -19,12 +20,18 @@
           </div>
     </header>
 </header>
+
+<h1>samar alazzm</h1>
+<div class="intr">
 <section>
     <p>My name is samar from irbid ,my major computer information systems<br>
     graduated from yarmouk university</p>
 </section>
+</div>
+
 <form>
-    <label >Name</label>
+    <h2>Contact Me</h2>
+    <label >name</label>
     <input type="text">
     <br>
     <br>
