add one file js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="./logoipsum-logo-13.jpg">
     <link rel="stylesheet" href="./style/index.css">
 </head>
-<body>
+<body>s
 
     <header>
         <h1>ToDo list</h1>
@@ -54,6 +54,8 @@
     <footer>
         &copy; Copyright 2022 HTML
         <script src="./js/app.js"></script>
+        <script src="./js/app2.js"></script>
+
 
     
     </footer>
